--- a/kuard/Chart.yaml
+++ b/kuard/Chart.yaml
@@ -1,6 +1,8 @@
+# @see https://github.com/kubernetes-up-and-running/kuard
+
 apiVersion: v2
 name: kuard
-description: A Helm chart for Kubernetes
+description: A Helm chart to install kuard
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -21,4 +23,4 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: "v0.10.0-blue"
